...
            android:layout_marginBottom="10dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            app:layout_constraintRight_toRightOf="parent">

            <EditText
                android:id="@+id/edtChat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/chat_edit_text_margin_right"
                android:layout_marginStart="@dimen/chat_edit_text_margin_left"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:hint="@string/enter_message"
                android:maxLines="6" />

            <ImageButton
                android:id="@+id/btnSend"
                android:layout_width="@dimen/send_button_width"
                android:layout_height="@dimen/send_button_height"
                android:layout_gravity="bottom"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:contentDescription="@string/send"
...
