<resources>
    <string name="app_name">ChatUI</string>
    <string name="enter_message">Enter message</string>
    <string name="send">send</string>
    <string name="error_message">Enter some text</string>
</resources>
